:recycle: Improve support enum types, this requires changes to the format too